# Mowito_task

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: nodes.launch.py
src/: image_converter.cpp  mode_select.cpp
srv/: ModeSelect.srv
