<?xml version="1.0"?>
<package format="3">
  <name>mowito_task</name>
  <version>0.1.0</version>
  <description>ROS 2 package for image conversion and service handling</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>usb_cam</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
